# ottonoob-website

./: .gitmodules  config.toml  config.yaml  pyproject.toml  roster.py
.github/workflows/: openshift.yml
content/: about.md
content/blog/: example_blog.md
content/docs/: hosting_hugo_openshift.md
